--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint .",
     "start": "ts-node src/worker.ts",
     "start.watch": "nodemon src/worker.ts",
-    "workflow": "ts-node src/client.ts"
+    "workflow": "ts-node src/client.ts",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "nodemonConfig": {
     "execMap": {
@@ -26,18 +28,21 @@
     "@temporalio/workflow": "^1.8.4",
     "@types/node-fetch": "^2.6.4",
     "nanoid": "3.x",
-    "node-fetch": "^2.6.2"
+    "node-fetch": "2.6.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.0",
+    "@types/jest": "29.5.5",
     "@types/node": "^16.11.43",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-deprecation": "^1.2.1",
+    "jest": "29.7.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.8.8",
+    "ts-jest": "29.1.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.4.2"
   }
